--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -6,7 +6,6 @@ html {
 
 a {
     color: black;
-    text-decoration: none;
 }
 h1 {
     font-size: 4rem;
@@ -24,13 +23,16 @@ nav {
     width: 20%;
     margin: 0;
     background-color: hsl(50, 100%, 50%);
-    border: 1px solid black;
-    transition: left 0.4s ease-out 0.1s;
+    border-right: 1px solid black;
+    transition: left 0.5s ease-out 0.1s;
     display: flex;
     flex-direction: row;
 }
 nav:hover {
     left: 0;
+}
+nav a {
+    text-decoration: none;
 }
 nav .panel {
     margin: 0;
@@ -38,7 +40,7 @@ nav .panel {
     flex-direction: column;
     justify-content: center;
     width: 75%;
-    transition: width 1s;
+    transition: width 0.5s ease-out 0.1s;
 }
 nav:hover .panel {
     width: 100%;
@@ -69,7 +71,7 @@ nav ul li:hover {
     align-items: center;
     font-size: 4rem;
     width: 25%;
-    transition: font-size 1s, width 1s;
+    transition: font-size 0.5s ease-out 0.1s, width 0.5s ease-out 0.1s;
 }
 nav:hover #arrow {
     font-size: 0px;
@@ -77,5 +79,11 @@ nav:hover #arrow {
 }
 
 .header {
+    margin: 0; padding: 0;
+    right: 0;
     text-align: center;
+    border-bottom: 1px solid black;
+}
+.content {
+    margin: 2.5% 2.5% 2.5% 7.5%;
 }
