--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -38,8 +38,9 @@ nav .panel {
     margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     width: 75%;
+    border-right: 1px solid black;
     transition: width 0.5s ease-out 0.1s;
 }
 nav:hover .panel {
@@ -126,6 +127,8 @@ img {
     display: flex;
     justify-content: start;
     align-items: center;
+    flex-wrap: wrap;
+    flex-shrink: 2;
 }
 #bandcamp iframe {
     border: 0; 
@@ -164,4 +167,25 @@ img {
     height: 3rem;
     margin-right: 1rem;
     margin-left: 1rem;
+}
+
+@media only screen and (max-height: 900px) {
+    nav ul li {height: 10rem;}
+}
+@media only screen and (max-height: 800px) {
+    nav ul li {height: 8rem;}
+}
+@media only screen and (max-height: 680px) {
+    nav ul li {height: 6rem;}
+    .header {height: 8rem;}
+    h1 {font-size: 3rem;}
+}
+
+@media only screen and (max-width: 940px) {
+    nav {left: -15rem; width: 20.5625rem;}
+    #x {width: 5.875rem;}
+    .content {margin-left: 7rem;}
+}
+@media only screen and (max-width: 640px) {
+    img {max-height: 20rem;}
 }
